crates/ao-tui/tests/snapshots/test_slot_list__error_failed_status_message.snap
---
source: crates/ao-tui/tests/test_slot_list.rs
expression: output
---
" AspireOrchestrator (Rust)                                                      "
"┌ Slots ───────────────────┐┌ Details ─────────────────────────────────────────┐"
"│>  auth  ■ ○  feature/auth││  Branch     feature/auth                         │"
"│                          ││  Status     Ready                                │"
"│                          ││  Agent      None                                 │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          │└──────────────────────────────────────────────────┘"
"│                          │┌ Agent Log [L] toggle ────────────────────────────┐"
"│                          ││ No log output                                    │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
" Start failed: port in use                                                      "
"[N]ew [S]tart [K]ill [D]estroy [A]gent [R]ebase [G]push [P]term [L]og [M]ultiple"
