crates/ao-tui/tests/snapshots/test_slot_list__log_view_aspire_with_content.snap
---
source: crates/ao-tui/tests/test_slot_list.rs
expression: output
---
" AspireOrchestrator (Rust)                                                      "
"┌ Slots ───────────────────┐┌ Details ─────────────────────────────────────────┐"
"│>  auth  ▶ ●  feature/auth││  Branch     feature/auth                         │"
"│                          ││  Status     Running                              │"
"│                          ││  Agent      Active                               │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          │└──────────────────────────────────────────────────┘"
"│                          │┌ Aspire Log [L] toggle ───────────────────────────┐"
"│                          ││info: Aspire dashboard running at                 │"
"│                          ││http://localhost:15000                            │"
"│                          ││info: Service 'api' started on port 5001          │"
"│                          ││info: Service 'web' started on port 5002          │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
"                                                                                "
"[N]ew [S]tart [K]ill [D]estroy [A]gent [R]ebase [G]push [P]op-in [L]og [M]ultipl"
