crates/ao-tui/tests/snapshots/test_slot_list__log_view_with_content.snap
---
source: crates/ao-tui/tests/test_slot_list.rs
expression: output
---
" AspireOrchestrator (Rust)                                                      "
"┌ Slots ───────────────────┐┌ Details ─────────────────────────────────────────┐"
"│>  auth  ▶ ●  feature/auth││  Branch     feature/auth                         │"
"│                          ││  Status     Running                              │"
"│                          ││  Agent      Active                               │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          │└──────────────────────────────────────────────────┘"
"│                          │┌ Agent Log [L] toggle ────────────────────────────┐"
"│                          ││2025-06-15 10:00:01 Starting agent...             │"
"│                          ││2025-06-15 10:00:02 Loading configuration         │"
"│                          ││2025-06-15 10:00:03 Connected to workspace        │"
"│                          ││2025-06-15 10:00:04 Running task: implement auth  │"
"│                          ││2025-06-15 10:00:05 Task completed successfully   │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
"                                                                                "
"[N]ew [S]tart [K]ill [D]estroy [A]gent [R]ebase [G]push [P]op-in [L]og [?]help ["
