crates/ao-tui/tests/snapshots/test_slot_list__multiple_slots_mixed_status.snap
---
source: crates/ao-tui/tests/test_slot_list.rs
expression: output
---
" AspireOrchestrator (Rust)                                                      "
"┌ Slots ───────────────────┐┌ Details ─────────────────────────────────────────┐"
"│>  auth  ■ ○  feature/auth││  Branch     feature/auth                         │"
"│   payments  ▶ ●  feature/││  Status     Ready                                │"
"│   search  ✗ ○  feature/se││  Agent      None                                 │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          │└──────────────────────────────────────────────────┘"
"│                          │┌ Agent Log [L] toggle ────────────────────────────┐"
"│                          ││ No log output                                    │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
"                                                                                "
"[N]ew [S]tart [K]ill [D]estroy [A]gent [R]ebase [G]push [P]op-in [L]og [?]help ["
